--- a/USCBookingSystemApp/src/main/java/UI/Homepage.form
+++ b/USCBookingSystemApp/src/main/java/UI/Homepage.form
@@ -641,6 +641,9 @@
                       <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
                     </Property>
                   </Properties>
+                  <Events>
+                    <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jtAttendMouseClicked"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
